Fixed sizing error on iphone

--- a/src/CSS/queries.css
+++ b/src/CSS/queries.css
@@ -90,21 +90,6 @@
     }
 }
 
-@media only screen and (max-width: 880px) {
-    .header-content {
-        margin-left: 40px !important;
-    }
-
-    .header-content h1 {
-        font-size: clamp(1rem, 5vmin, 2rem) !important;
-    }
-
-    .next {
-        font-size: 18px;
-        width: 350px;
-    }
-}
-
 @media only screen and (max-width: 1024px) {
     .header-content h1 {
         font-size: clamp(3rem, 5vmin, 5rem);
@@ -127,6 +112,21 @@
     } */
 }
 
+@media only screen and (max-width: 880px) {
+    .header-content {
+        margin-left: 40px !important;
+    }
+
+    .header-content h1 {
+        font-size: clamp(1rem, 5vmin, 2rem) !important;
+    }
+
+    .next {
+        font-size: 18px;
+        width: 350px;
+    }
+}
+
 /* Mobile Phones */
 
 @media only screen and (max-width: 450px) {
@@ -143,7 +143,7 @@
     .fade-in-header {
         font-size: clamp(1rem, 10vmin, 1rem);
         top: -30px;
-        padding: 10px;
+        padding: 0px;
     }
 
     .header-content {
@@ -151,8 +151,8 @@
         align-items: center;
         width: 100vw;
         height: 100%;
-        margin-left: -10px;
-        /* gap: 20px; */
+        margin: 0 !important;
+        margin-top: 20px !important;
     }
 
     .header-text,
@@ -167,7 +167,8 @@
         height: auto;
         position: relative;
         margin: 10px;
-        left: -7px;
+        /* left: -50px; */
+        /* top: 60px; */
     }
 
     .header-image img {
@@ -182,11 +183,17 @@
         text-align: center;
         padding: 5px;
         margin: 0 auto;
-        margin-top: -30px;
+
+    }
+
+    .next,
+    .header-text h1 {
+        width: 100%;
     }
 
     .header-text h1 {
         font-size: 30px;
+        margin-left: 20px;
     }
 
     .header-text p {
